Refactor project structure and enhance testing framework
- Remove .clang-tidy configuration file.
- Update .gitignore to exclude build directory.
- Modify CMakeLists.txt to set C++ standard and include directories for tests.
- Add README.md with project structure and usage instructions.
- Refactor binpow functions to use inline and improve header inclusion.
- Create scripts for module generation and unit testing with pre-commit hooks.
- Implement Berlin-style testing framework with base, manager, and wrapper classes.
- Add unit tests for binpow and modular arithmetic functions.
- Remove outdated test files for modular arithmetic and modular inverse.

--- a/.gitignore
+++ b/.gitignore
@@ -473,5 +473,6 @@ $RECYCLE.BIN/
 # personal
 playground
 .idea
+/build
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,c++,clion,clion+all,visualstudiocode,windows,linux,python
