Refactor mod_inverse tests: skip tests for non-prime modulus and improve test case handling

--- a/.gitignore
+++ b/.gitignore
@@ -470,9 +470,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# personal
+# misc
 playground
 .idea
 /build
 .vscode
-# End of https://www.toptal.com/developers/gitignore/api/macos,c++,clion,clion+all,visualstudiocode,windows,linux,python
+misc.txt
